# korasense

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  EMBEDDING_GUIDE.md  GEMINI_AGENTS_GUIDE.md  KNOWLEDGE_APP_MIGRATION.md  MULTIMODAL_GUIDE.md  OPTIMIZATION_NOTES.md  OPUS_QUICKSTART.md  README.md  RETRIEVAL_OPTIMIZATION.md  SETUP.md  STATUS.md  package-lock.json  package.json  vercel.json
.github/: copilot-instructions.md
prisma/: schema.prisma
public/: sw.js
public/downloads/: README.md
scripts/: create-api-key.ts  setup-qdrant.ts
senses/filesense/: Cargo.toml  config.example.toml
senses/filesense-app/: index.html  package-lock.json  package.json
senses/filesense-app/src/: App.css  App.tsx
senses/filesense-app/src-tauri/: Cargo.toml  create_icons.py  tauri.conf.json
senses/filesense-app/src-tauri/src/: main.rs
senses/filesense/src/: main.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(protected)/: layout.tsx
src/app/demo/: page.tsx
src/app/test-opus/: page.tsx
src/components/demo/: DemoConsole.tsx
src/components/eval/: EvalDashboard.tsx
src/components/knowledge/: DocumentList.tsx  DocumentUpload.tsx
src/components/landing/: AgentPipeline.tsx  HeroButtons.tsx
src/components/navigation/: Navigation.tsx
src/components/risk/: AgentTimeline.tsx  RiskConsole.tsx
src/components/workflows/: WorkflowBuilder.tsx  WorkflowDashboard.tsx
src/lib/: agent_pipeline.ts  auth.ts  chunking.ts  embeddings.ts  gemini.ts  gemini_agent.ts  metrics.ts  opus.ts  qdrant.ts  web_search.ts
src/lib/types/: opus.ts
(+15 files in other folders)
