[package]
name = "filesense"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
notify = "6.0"
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
