[package]
name = "opsense-knowledge-sync"
version = "0.1.0"
edition = "2021"
description = "Automatic document ingestion for Opsense Knowledge App"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
notify = "6"
anyhow = "1.0"
